@@ -37,31 +37,6 @@ dependencies {
 }
 ```
 
-### Java 9+ 
-To use model checking strategy for Java 9 and later, add the following JVM properties:
-
-```text
---add-opens java.base/jdk.internal.misc=ALL-UNNAMED
---add-exports java.base/jdk.internal.util=ALL-UNNAMED
---add-exports java.base/sun.security.action=ALL-UNNAMED
-```
-
-They are required if the testing code uses classes from the `java.util` package since
-some of them use `jdk.internal.misc.Unsafe` or similar internal classes under the hood.
-
-If you use Gradle, add the following lines to `build.gradle.kts`:
-
-```
-tasks.withType<Test> {
-    jvmArgs(
-        "--add-opens", "java.base/jdk.internal.misc=ALL-UNNAMED", 
-        "--add-exports", "java.base/jdk.internal.util=ALL-UNNAMED", 
-        "--add-exports", "java.base/sun.security.action=ALL-UNNAMED"
-    )
-}
-```
-
-
 ## Example 
 
 The following Lincheck test easily finds a bug in the standard Java's `ConcurrentLinkedDeque`:
